$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-05-19 [A] Added partial Czech translation (user contribution) {GauGau}
2010-05-11 [D] Added apache server response codes {GauGau}
2010-05-12 [B] Fixed language issue during installation (thread ID 64829) {eenemeenemuu}
2010-05-12 [B] Fixed dupes when ordering by position (thread ID 64919) {eenemeenemuu}
2010-05-11 [D] Added theme examples to navigation {GauGau}
2010-05-11 [D] Started Spanish translation of documentation (user contribution) {GauGau}
2010-05-11 [B] Fixed ambiguous column name (thread ID 64809) {eenemeenemuu}
2010-05-10 [A] Fixed check for missing JAVASCRIPT token (thread ID 63279) {eenemeenemuu}
2010-05-10 [A] Added check for missing JAVASCRIPT token (thread ID 63279) {GauGau}
2010-05-10 [D] Added navigation sub-items to theme creation tutorial {GauGau}
2010-05-10 [D] Added clarification about editing include/themes.inc.php {GauGau}
2010-05-10 [A] Added klingon flag for a possible future language file {GauGau}
2010-05-05 [B] Fixed disabling of browse by date button (thread ID 64806) {eenemeenemuu}
2010-05-03 [A] Added plugin hook to display something after an IP address {GauGau}
2010-05-03 [D] Updated Dutch translation (user contribution) {GauGau}
2010-05-02 [B] Fixed faulty executed database update on stat_details.php {eenemeenemuu}
2010-05-02 [C] Fixed missing header for overall stats (thread ID 64799) {eenemeenemuu}
2010-05-02 [B] Fixed js error for search meta album (thread ID 64312) {eenemeenemuu}
2010-05-02 [B] Fixed 'crop and rotate' issue {eenemeenemuu}
2010-05-01 [B] Fixed issue when performing an OR search (thread ID 64786) {eenemeenemuu}